# cmdr

./: .dockerignore  .gitguardian.yaml  .gitignore  .mcp.json  .mise.toml  .oxfmtrc.json  .prettierignore  .prettierrc  .stylelintignore  AGENTS.md  CHANGELOG.md  CLAUDE.md  CONTRIBUTING.md  Cargo.toml  LICENSE  PHASE4_P1_SUMMARY.md  PHASE4_P2_SUMMARY.md  README.md  eslint.config.js  feature-status.json  knip.json  package.json  pnpm-lock.yaml  pnpm-workspace.yaml  renovate.json  rust-toolchain.toml  specification.md  tsconfig.json  vite.config.js  vitest.config.ts
apps/desktop/src-tauri/: .gitignore  .taurignore  CLAUDE.md  Cargo.toml  DETAILS.md  Entitlements.plist  Info.plist  build.rs  clippy.toml  deny.toml  tauri.conf.json  tauri.dev.conf.json  tauri.dev.json
apps/desktop/src-tauri/benches/: icon_benchmarks.rs
apps/desktop/src-tauri/capabilities/: CLAUDE.md  DETAILS.md  debug.json  default.json  desktop.json  queue.json  settings.json  shortcuts.json  viewer.json
apps/desktop/src-tauri/examples/: docker_smb_test.rs  probe_downloads_fsevents.rs  smb_compose.rs
apps/desktop/src-tauri/icons/: CLAUDE.md  DETAILS.md  icon.icns
apps/desktop/src-tauri/proptest-regressions/file_viewer/: encoding_test.txt
apps/desktop/src-tauri/resources/: 99-cmdr-mtp.rules  Assets.car  Sequoia.icns  ai
apps/desktop/src-tauri/src/: accent_color.rs  accent_color_linux.rs  benchmark.rs  child_window_state.rs  config.rs  dev_fixtures.rs  diagnostics_snapshot.rs  drag_image_detection.rs  drag_image_swap.rs  fda_gate.rs  feedback.rs  icons.rs  ignore_poison.rs  install_id.rs  instance_lock.rs  ipc.rs  ipc_collectors.rs  lib.rs  linux_distro.rs  linux_icons.rs  location.rs  macos_icons.rs  main.rs  menu.rs  native_drag.rs  net.rs  permissions.rs  permissions_linux.rs  platform.rs  pluralize.rs  process_memory.rs  reduce_transparency.rs  settings.rs  short_id.rs  space_poller.rs  sqlite_util.rs  system_events.rs  system_memory.rs  system_strings.rs  test_mode.rs  (+6 more)
apps/desktop/src-tauri/src/agent/: CLAUDE.md  DETAILS.md  consent.rs  mod.rs  pricing.rs  types.rs
apps/desktop/src-tauri/src/ai/: CLAUDE.md  DETAILS.md  api_keys.rs  client.rs  client_integration_test.rs  client_local_llama_test.rs  client_real_anthropic_test.rs  client_real_groq_test.rs  client_real_openai_test.rs  client_streaming_test.rs  connection_check.rs  download.rs  extract.rs  install.rs  manager.rs  mod.rs  process.rs  server.rs  state.rs  stream_registry.rs  suggestions.rs  suggestions_streaming_test.rs  translate.rs  translate_error.rs
apps/desktop/src-tauri/src/analytics/: CLAUDE.md  DETAILS.md  config_shape.rs  mod.rs  posthog.rs
apps/desktop/src-tauri/src/clipboard/: CLAUDE.md  DETAILS.md  mock.rs  mod.rs  pasteboard.rs  payload.rs  payload_tests.rs  state.rs  store.rs
apps/desktop/src-tauri/src/commands/: CLAUDE.md  DETAILS.md  agent.rs  ai_query_builder.rs  ai_response_parser.rs  analytics.rs  beta_signup.rs  child_window_state.rs  clipboard.rs  crash_reporter.rs  e2e.rs  eject.rs  error_reporter.rs  favorites.rs  feedback.rs  file_actions.rs  file_system.rs  file_viewer.rs  font_metrics.rs  go_to_path.rs  icons.rs  indexing.rs  licensing.rs  logging.rs  mcp.rs  menu.rs  mod.rs  mtp.rs  network.rs  operation_log.rs  quick_look.rs  rename.rs  restricted_paths.rs  search.rs  selection.rs  settings.rs  smb_diagnostics.rs  sync_status.rs  ui.rs  util.rs  (+4 more)
apps/desktop/src-tauri/src/crash_reporter/: CLAUDE.md  DETAILS.md  mod.rs  symbolicate.rs  tests.rs
apps/desktop/src-tauri/src/downloads/: CLAUDE.md  DETAILS.md  commands.rs  filter.rs  global_shortcut.rs  ignore_set.rs  latest_ring.rs  mod.rs  runtime.rs  watcher.rs
apps/desktop/src-tauri/src/error_reporter/: CLAUDE.md  DETAILS.md  auto_dispatcher.rs  auto_dispatcher_tests.rs  breadcrumbs.rs  bundle_builder.rs  bundle_capper.rs  mod.rs  tail_walker.rs  tests.rs
apps/desktop/src-tauri/src/favorites/: CLAUDE.md  DETAILS.md  mod.rs  store.rs
apps/desktop/src-tauri/src/file_system/: CLAUDE.md  DETAILS.md  caching.rs  cloud_actions.rs  file_provider.rs  filesystem_kind.rs  hidden_files_test.rs  integration_test.rs  linux_mounts.rs  macos_copy.rs  macos_metadata.rs  metadata.rs  mock_provider.rs  mod.rs  open_with.rs  operations.rs  operations_test.rs  real_provider.rs  sorting.rs  streaming.rs  sync_status.rs  tags.rs  validation.rs  volume_manager.rs  watcher.rs  watcher_test.rs  write_operations.rs  write_operations_integration_test.rs  write_operations_test.rs
apps/desktop/src-tauri/src/file_viewer/: CLAUDE.md  DETAILS.md  archive_extract.rs  archive_extract_test.rs  byte_seek.rs  byte_seek_test.rs  content_kind.rs  content_kind_test.rs  encoding.rs  encoding_test.rs  full_load.rs  full_load_test.rs  line_index.rs  line_index_test.rs  media.rs  media_backend.rs  media_protocol.rs  media_protocol_test.rs  media_session.rs  media_session_test.rs  mod.rs  range_read.rs  search_cancel_test_support.rs  search_matcher.rs  search_matcher_test.rs  session.rs  session_test.rs  watcher.rs  watcher_test.rs
apps/desktop/src-tauri/src/font_metrics/: CLAUDE.md  DETAILS.md  mod.rs  mod_test.rs
apps/desktop/src-tauri/src/go_to_path/: CLAUDE.md  DETAILS.md  history.rs  mod.rs
apps/desktop/src-tauri/src/icons/: CLAUDE.md  DETAILS.md  disk_cache.rs  mod.rs  per_path.rs  special_folders.rs
apps/desktop/src-tauri/src/importance/: CLAUDE.md  DETAILS.md  classify.rs  commands.rs  fixtures.rs  last_used.rs  mod.rs  signals.rs  writer.rs  writer_registry.rs
apps/desktop/src-tauri/src/indexing/: CLAUDE.md  DETAILS.md  aggregator.rs  churn_monitor.rs  enrichment.rs  event_loop.rs  events.rs  expected_totals.rs  external_drive_fixture.rs  failure.rs  firmlinks.rs  freshness.rs  integration_tests.rs  lifecycle_bus.rs  local_external_index.rs  local_reconcile.rs  manager.rs  memory_watchdog.rs  metadata.rs  micro_scan.rs  mod.rs  mtp_index.rs  mtp_watch.rs  network_scan.rs  partial_agg.rs  path_resolver.rs  pending_sizes.rs  progress_reporter.rs  queries.rs  reconcile_bench.rs  reconcile_correctness.rs  reconciler.rs  (+21 more)
apps/desktop/src-tauri/tests/: viewer_tail_integration.rs
(+4819 files in other folders)
