[package]
name = "cmdr"
version = "0.11.1"
description = "A blazing fast, keyboard-driven, two-pane file manager built, Rust, Tauri, and ❤️"
authors = ["David Veszelovszki <veszelovszki@gmail.com>"]
edition = "2024"
license = "LicenseRef-BSL-1.1"
default-run = "Cmdr"
publish = false  # Private application, not for crates.io

[features]
# CrabNebula automation plugin for macOS E2E testing. Never enable in production builds.
automation = ["dep:tauri-plugin-automation"]
# Playwright E2E testing plugin (socket bridge to real webview). Never enable in production builds.
playwright-e2e = ["dep:tauri-plugin-playwright"]
# Virtual MTP device for E2E testing (registers a fake Android device). Never enable in production builds.
virtual-mtp = ["mtp-rs/virtual-device"]
# Virtual SMB hosts for E2E testing (injects synthetic network hosts). Never enable in production builds.
smb-e2e = []

[[bin]]
name = "Cmdr"
path = "src/main.rs"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
# The `_lib` suffix may seem redundant, but it is necessary
# to make the lib name unique and wouldn't conflict with the bin name.
# This seems to be only an issue on Windows, see https://github.com/rust-lang/cargo/issues/8519
name = "cmdr_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
tauri-plugin-opener = "2"
tauri-plugin-mcp-bridge = "0.10"
tauri-plugin-store = "2"
tauri-plugin-dialog = "2.6"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
notify = "8"
dirs = "6"
uzers = "0.12.2"
image = "0.25.10"
base64 = "0.22.1"
rayon = "1.11.0"
regex = "1"
uuid = { version = "1.19.0", features = ["v4"] }
tauri-plugin-clipboard-manager = "2"
notify-debouncer-full = "0.7.0"
bincode2 = "2"
tauri-plugin-drag = "2.1.0"
drag = "2.1.0"
tauri-plugin-fs = "2.4.4"
alphanumeric-sort = "1.5"
chrono = "0.4"
ed25519-dalek = { version = "2.1", features = ["rand_core"] }
# Device ID hashing for fair-use license tracking
sha2 = "0.10.9"
tauri-plugin-log = "2"
log = "0.4"
# Memory allocator: returns memory to OS faster than system malloc, reduces fragmentation
mimalloc = "0.1"
# HTTP client for API server validation and AI downloads
reqwest = { version = "0.13", features = ["json", "rustls", "stream"], default-features = false }
# MCP server
axum = "0.8"
tokio = { version = "1", features = ["rt-multi-thread", "net", "time", "sync", "macros"] }
futures-util = "0.3"
tower-http = { version = "0.6", features = ["cors"] }
tauri-plugin-updater = "2"
tauri-plugin-process = "2"
memchr = "2"
walkdir = "2"
# Drive indexing: parallel directory walker, SQLite store, and macOS FSEvents watcher
jwalk = "0.8"
rusqlite = { version = "0.39", features = ["bundled", "collation", "fallible_uint"] }
# For chunked copy metadata preservation (network filesystems)
xattr = "1"
filetime = "0.2"
exacl = "0.12"
sysinfo = { version = "0.38.4", default-features = false, features = ["system"] }
time = { version = "0.3", features = ["parsing", "macros", "formatting"] }
# Playwright E2E testing plugin — socket bridge for direct webview injection (optional, feature-gated)
tauri-plugin-playwright = { version = "0.2.2", optional = true }

[target.'cfg(unix)'.dependencies]
libc = "0.2"

[target.'cfg(not(any(target_os = "android", target_os = "ios")))'.dependencies]
tauri-plugin-window-state = "2"

[target.'cfg(target_os = "linux")'.dependencies]
trash = "5.2"
# Credential storage via Linux secret service (GNOME Keyring / KDE Wallet)
keyring = "3"
# Encrypted file-based credential storage fallback when no secret service is available
cocoon = "0.4"
# D-Bus client for XDG Desktop Portal (accent color, appearance settings)
zbus = "5"
# Native file icons: XDG icon theme lookup (pure Rust, no GTK dependency)
freedesktop-icons = "0.4"
# MIME type guessing from file extensions (for icon name resolution)
mime_guess = "2"

[target.'cfg(any(target_os = "macos", target_os = "linux"))'.dependencies]
# MTP (Android device) support via pure Rust implementation
mtp-rs = "0.11.0"
# USB hotplug detection for MTP device watcher
nusb = "0.2.3"
bytes = "1"
# mDNS discovery for network host browsing (pure Rust, cross-platform)
mdns-sd = { version = "0.18", features = ["logging"] }
# SMB2/3 protocol client for share enumeration (pure Rust, pipelined I/O)
smb2 = { git = "https://github.com/vdavid/smb2", branch = "main" }
# NFD normalization for APFS collation and SMB path normalization
unicode-normalization = "0.1"

[target.'cfg(target_os = "macos")'.dependencies]
file_icon_provider = "1.0.0"
core-foundation = "0.10.1"
core-services = "1.0.0"
icns = "0.4.0"
plist = "1.8.0"
urlencoding = "2.1.3"
objc2 = { version = "0.6", features = ["std", "exception"] }
objc2-foundation = { version = "0.3", features = [
    "NSURL", "NSString", "NSDictionary", "NSDate", "NSArray", "NSValue", "NSError",
    "NSFileManager", "NSNotification",
] }
objc2-app-kit = { version = "0.3", features = [
    "NSDragging", "NSDraggingItem", "NSImage", "NSColor", "NSColorSpace",
    "NSApplication", "NSMenu", "NSMenuItem", "NSPasteboard", "NSRunningApplication",
] }
block2 = "0.6"
security-framework = "3.2"
# Drive indexing: macOS FSEvents watcher with event IDs and sinceWhen replay
cmdr-fsevent-stream = { path = "../../../crates/fsevent-stream" }
# Custom updater: signature verification, tarball extraction, version comparison
minisign-verify = "0.2"
flate2 = "1"
tar = "0.4"
semver = "1"

# CrabNebula automation plugin for macOS E2E testing (optional, feature-gated)
tauri-plugin-automation = { version = "0.1", optional = true }

[dev-dependencies]
criterion = { version = "0.8.1", features = ["html_reports"] }
# For test-only cryptographic key generation (compatible with ed25519-dalek's rand_core 0.6)
rand_core = { version = "0.6", features = ["getrandom"] }
tempfile = "3"

[[bench]]
name = "icon_benchmarks"
harness = false
