[package]
name = "cmdr"
version = "0.29.0"
description = "A blazing fast, keyboard-driven, two-pane file manager built, Rust, Tauri, and ❤️"
authors = ["David Veszelovszki <david@getcmdr.com>"]
edition = "2024"
license = "LicenseRef-BSL-1.1"
default-run = "Cmdr"
publish = false  # Private application, not for crates.io

[features]
# Playwright E2E testing plugin (socket bridge to real webview). Never enable in production builds.
playwright-e2e = ["dep:tauri-plugin-playwright"]
# Virtual MTP device for E2E testing (registers a fake Android device). Never enable in production builds.
virtual-mtp = ["mtp-rs/virtual-device"]
# Virtual SMB hosts for E2E testing (injects synthetic network hosts). Never enable in production builds.
smb-e2e = ["smb2/testing"]

[[bin]]
name = "Cmdr"
path = "src/main.rs"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
# The `_lib` suffix may seem redundant, but it is necessary
# to make the lib name unique and wouldn't conflict with the bin name.
# This seems to be only an issue on Windows, see https://github.com/rust-lang/cargo/issues/8519
name = "cmdr_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = ["macos-private-api"] }
tauri-plugin-opener = "2"
tauri-plugin-mcp-bridge = "0.11"
tauri-plugin-store = "2"
tauri-plugin-dialog = "2.6"
tauri-plugin-notification = "2.3.3"
# Global system-wide keyboard shortcut (default ⌃⌥⌘J for "reveal latest download"). On
# macOS, the plugin uses Carbon's `RegisterEventHotKey` so it needs no extra TCC grant
# (Accessibility/Input Monitoring not required). Pinned at 2.3.1 (published 2025-10-27,
# ~7 months old; the 2.3.2 release from 2026-05-28 is still within the 14-day age policy).
tauri-plugin-global-shortcut = "=2.3.1"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
notify = "8"
dirs = "6"
uzers = "0.12.2"
image = "0.25.10"
base64 = "0.22.1"
rayon = "1.11.0"
regex = "1"
uuid = { version = "1.19.0", features = ["v4"] }
tauri-plugin-clipboard-manager = "2"
notify-debouncer-full = "0.7.0"
bincode2 = "2"
tauri-plugin-fs = "2.4.4"
alphanumeric-sort = "1.5"
chrono = "0.4"
ed25519-dalek = { version = "2.1", features = ["rand_core"] }
# Device ID hashing for fair-use license tracking
sha2 = "0.11"
log = "0.4"
# fern: hand-rolled log dispatch tree with per-output filtering. Replaces tauri-plugin-log
# (which routes everything through a single global level). The crate was already in the
# tree as a transitive of tauri-plugin-log; pinned at 0.7.1 (latest stable, ~17 months old).
fern = "0.7.1"
# file-rotate: size+count log rotation behind a `Write` impl. Dropped tauri-plugin-log,
# so we own the rotation now. 0.8.0 (latest stable, ~14 months old, MIT). Pulls in
# `chrono`/`filetime`/`flate2` are all already in our dep tree.
file-rotate = "0.8.0"
# Memory allocator: returns memory to OS faster than system malloc, reduces fragmentation
mimalloc = "0.1"
# HTTP client for API server validation and AI downloads
reqwest = { version = "0.13", features = ["json", "rustls", "stream", "multipart"], default-features = false }
# MCP server
axum = "0.8"
tokio = { version = "1", features = ["rt-multi-thread", "net", "time", "sync", "macros"] }
futures-util = "0.3"
# tokio-util: provides `CancellationToken` for cooperative cancellation of streaming
# AI suggestions (`ai/suggestions.rs::stream_folder_suggestions`). The `rt` feature
# enables runtime integration (token wakeups via tokio's reactor). 0.7.18 is the latest
# stable (published 2026-01-04). MIT license; tracks tokio's release cadence.
tokio-util = { version = "0.7.18", features = ["rt"] }
tower-http = { version = "0.6", features = ["cors"] }
tauri-plugin-updater = "2"
tauri-plugin-process = "2"
memchr = "2"
# File-viewer encoding decoder (UTF-16, Windows-1252, ISO-8859-1, Mac Roman, US-ASCII).
# Pinned 2026-05-28 against crates.io v0.8.35 (released 2024-10-24, well past 14-day gate).
# Apache-2.0 OR MIT.
encoding_rs = "0.8.35"
# Lock-free atomic Arc swap used by the file viewer to replace the active backend
# (ByteSeek/LineIndex) without taking a write lock on the read path. Already pulled
# in transitively; declaring it makes the dependency explicit.
arc-swap = "1.9.1"
walkdir = "2"
# Drive indexing: parallel directory walker, SQLite store, and macOS FSEvents watcher
jwalk = "0.8"
rusqlite = { version = "0.39", features = ["bundled", "collation", "fallible_uint"] }
# For chunked copy metadata preservation (network filesystems)
xattr = "1"
filetime = "0.2"
exacl = "0.12"
sysinfo = { version = "0.38.4", default-features = false, features = ["system"] }
time = { version = "0.3", features = ["parsing", "macros", "formatting"] }
# Playwright E2E testing plugin: socket bridge for direct webview injection (optional, feature-gated).
# Pinned to the `feat/per-window-native-screenshot` branch of the vdavid fork at
# https://github.com/vdavid/tauri-playwright until that fix lands upstream and ships to crates.io. It
# adds label-targeted macOS native screenshots (needed to capture non-frontmost windows like Settings)
# on top of the already-merged multi-window work. The crate lives in `packages/plugin/` inside that
# repo; Cargo's git source resolves the workspace member automatically.
tauri-plugin-playwright = { git = "https://github.com/vdavid/tauri-playwright.git", branch = "feat/per-window-native-screenshot", optional = true }
# Error reporter: zip the bundle (manifest + redacted log files). `deflate` is the default
# compression algorithm; we don't need bzip2/zstd/etc. for log text.
zip = { version = "8.6", default-features = false, features = ["deflate"] }
# Error reporter: short-ID generation (`ERR-XXXXX`) using rejection sampling.
rand = "0.10"
# Pure-Rust git library for the git browser (M1: discover, repo info, status).
# Pinned at 0.81.0 (published 2026-03-22, ~5 weeks old at landing) per
# project rule on avoiding 0-day vulns. Default features include `status`,
# `basic`, and `extras` which cover discover + ahead/behind + status walk.
# `tree-editor` opts into the in-memory `Repository::edit_tree()` API used
# by `file_system/git/test_fixtures.rs` so test fixtures build via gix
# instead of dozens of `git` CLI `fork+exec` calls (each ~50-150 ms on a
# loaded machine; one fixture chain used to spawn ~31 of them and time
# out the 8 s nextest cap under check.sh contention). Pure API addition,
# no extra runtime cost on the prod read paths.
gix = { version = "0.81", features = ["tree-editor"] }
# Multi-provider LLM client. Normalizes OpenAI / OpenAI Responses / Anthropic / Gemini /
# xAI / Groq / DeepSeek / Ollama / OpenRouter / etc. Auto-routes `gpt-5*` / `*-codex` /
# `*-pro` to the Responses API; uses native protocols for Anthropic + Gemini. Replaces
# hand-rolled chat-completions JSON in `ai/client.rs`, which broke on (1) reasoning models
# that reject custom `temperature` (HTTP 400) and (2) Responses-only models that 404 on
# `/v1/chat/completions`.
#
# Pinned at the EXACT 0.6.0-beta.19 (published 2026-05-06). 0.6 is in active beta with
# weekly releases, but the API surface we use is stable across the 0.6 line, and this is
# the first version that auto-routes plain `gpt-5*` to the Responses API (PR #167); 0.5.3
# only routed `*-pro` and `*-codex`. Stable 0.6.0 isn't out yet; bumping to a future
# `0.6.0-beta.20` should be a no-op for us, but pin exact to avoid surprise breakage on
# `cargo update`. Solo maintainer; MIT/Apache-2.0; ~25k LOC if we ever need to fork.
genai = "=0.6.0-beta.19"
# Type-safe IPC: typed Rust↔TS bindings for tauri commands and events.
# Generated `bindings.ts` lands in `apps/desktop/src/lib/ipc/`; the frontend
# imports `commands.commandName(args)` instead of `invoke('command_name', ...)`.
# Pinned at 2.0.0-rc.24 (published 2026-03-30, ~5 weeks old at landing); the
# v1 line is for Tauri 1, v2 RC line is the active branch for Tauri 2.
tauri-specta = { version = "=2.0.0-rc.24", features = ["derive", "typescript"] }
specta = { version = "=2.0.0-rc.24", features = ["derive", "serde_json"] }
# Fuzzy matcher for the in-directory "type to jump" feature. Helix's matcher, also used
# by Zellij and several TUI projects; fast (microseconds per match), smart-case, good
# scoring. Pinned at 0.3.1 (published 2024-02-20, well over a month old). MPL-2.0;
# already in the `deny.toml` allowlist. See `file_system/listing/fuzzy_jump.rs` for usage.
nucleo-matcher = "0.3.1"

[target.'cfg(unix)'.dependencies]
libc = "0.2"

[target.'cfg(not(any(target_os = "android", target_os = "ios")))'.dependencies]
tauri-plugin-window-state = "2"

[target.'cfg(target_os = "linux")'.dependencies]
trash = "5.2"
# Credential storage via Linux secret service (GNOME Keyring / KDE Wallet).
# `keyring` 4.0 was a full architectural rewrite; the cross-platform API moved to
# `keyring-core` and each backend (Secret Service, etc.) is a separate crate. Picking
# the zbus-based backend keeps everything pure-Rust and matches our existing tokio +
# zbus + RustCrypto stack; no system libdbus needed at build time.
keyring-core = "1"
zbus-secret-service-keyring-store = { version = "1", features = ["rt-tokio-crypto-rust"] }
# Encrypted file-based credential storage fallback when no secret service is available
cocoon = "0.4"
# D-Bus client for XDG Desktop Portal (accent color, appearance settings)
zbus = "5"
# Native file icons: XDG icon theme lookup (pure Rust, no GTK dependency)
freedesktop-icons = "0.4"
# MIME type guessing from file extensions (for icon name resolution)
mime_guess = "2"

[target.'cfg(any(target_os = "macos", target_os = "linux"))'.dependencies]
# MTP (Android device) support via pure Rust implementation
mtp-rs = "0.22.0"
# USB hotplug detection for MTP device watcher
nusb = "0.2.3"
bytes = "1"
# mDNS discovery for network host browsing (pure Rust, cross-platform)
mdns-sd = { version = "0.19", features = ["logging"] }
# SMB2/3 protocol client for share enumeration (pure Rust, pipelined I/O).
# When bumping: also re-vendor the test containers per
# apps/desktop/test/smb-servers/.compose/VENDORED.md
smb2 = { version = "0.11.3", features = ["serde"] }
# NFD normalization for APFS collation and SMB path normalization
unicode-normalization = "0.1"
# Percent-decoding for MCP resource URI query strings (cross-platform).
urlencoding = "2.1.3"
# Semver comparison: the custom updater (macOS) and the cross-platform What's-new changelog slicer.
semver = "1"

[target.'cfg(target_os = "macos")'.dependencies]
file_icon_provider = "1.0.0"
core-foundation = "0.10.1"
core-services = "1.0.0"
icns = "0.4.0"
plist = "1.8.0"
objc2 = { version = "0.6", features = ["std", "exception"] }
objc2-foundation = { version = "0.3", features = [
    "NSURL", "NSString", "NSDictionary", "NSDate", "NSArray", "NSValue", "NSError",
    "NSData", "NSFileManager", "NSNotification", "NSBundle", "NSDistributedNotificationCenter", "NSUserDefaults",
    "NSOperation", "NSProcessInfo",
] }
objc2-app-kit = { version = "0.3", features = [
    "NSDragging", "NSDraggingItem", "NSImage", "NSColor", "NSColorSpace",
    "NSApplication", "NSMenu", "NSMenuItem", "NSPasteboard", "NSRunningApplication",
    "NSWorkspace", "NSPanel", "NSOpenPanel", "NSSavePanel", "NSWindow", "NSResponder",
    "NSEvent",
    # File promises (drag out from MTP/SMB panes): NSFilePromiseProvider +
    # its delegate's writePromiseToURL:completionHandler: (block2 completion).
    "NSFilePromiseProvider", "block2",
] }
# Native macOS Quick Look panel (QLPreviewPanel + protocols). Published 2025-10-04, well
# outside the 14-day cool-off; tracks the same objc2 0.6 family as the other bindings above.
objc2-quick-look-ui = { version = "0.3.2", features = ["QLPreviewPanel", "QLPreviewItem", "objc2-app-kit"] }
block2 = "0.6"
security-framework = "3.2"
# Raw `SecItemCopyMatching` + keychain query constants, for reading SMB passwords that
# Finder/macOS saved (internet-password items the high-level crate can't filter by
# server/protocol). Already in the lockfile as a transitive dep of `security-framework`.
security-framework-sys = "2.17"
# Drive indexing: macOS FSEvents watcher with event IDs and sinceWhen replay
cmdr-fsevent-stream = { path = "../../../crates/fsevent-stream" }
# Custom updater: signature verification, tarball extraction, version comparison
minisign-verify = "0.2"
flate2 = "1"
tar = "0.4"


[dev-dependencies]
# SMB integration tests hash source and destination bytes to catch pipeline
# corruption (dropped/duplicated chunks, concurrency bleed) that a simple
# size-check or `Vec<u8>` equality would either miss or report uselessly
# (a 20 MB diff isn't actionable). Pinned about a month old (published
# 2026-01-08) to avoid 0-day vulns in the freshest release.
blake3 = "1.8.3"
# Used only by the `#[ignore]`'d `ipc::tests::export_bindings_test`, invoked
# via `pnpm bindings:regen` to write `apps/desktop/src/lib/ipc/bindings.ts`.
# Not needed by release builds.
specta-typescript = "=0.0.11"
criterion = { version = "0.8.1", features = ["html_reports"] }
# Dev-only env-driven logger. Tests don't use `tauri-plugin-log` (it requires
# a Tauri runtime), so this gives us `RUST_LOG`-controlled logs for wire
# traces in integration benches.
env_logger = "0.11.10"
# For test-only cryptographic key generation (compatible with ed25519-dalek's rand_core 0.6)
rand_core = { version = "0.6", features = ["getrandom"] }
tempfile = "3"
# Property-based testing. Used for algorithmic functions where the input space
# is too large for example tests to cover meaningfully (parser, glob→regex,
# topological sort, Unicode collation). Pinned at 1.11.0 (published 2026-03-24,
# ~7 weeks old at landing). MIT OR Apache-2.0.
proptest = "1.11.0"
# HTTP mock server for AI client integration tests. Verifies request shape (temperature
# present on chat/completions, omitted on /v1/responses) and parsing without burning
# real API quota. Pinned at 0.6.5 (latest stable, published 2025-08-24).
wiremock = "0.6.5"

[[example]]
name = "smb_compose"
required-features = ["smb-e2e"]

[[example]]
name = "docker_smb_test"
required-features = ["smb-e2e"]

[[bench]]
name = "icon_benchmarks"
harness = false
